--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hlsr-native",
-  "version": "1.0.8",
+  "name": "HLSRNative",
+  "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
